pod update. coreDataTest implementation

--- a/Objective-C UI Project/Podfile
+++ b/Objective-C UI Project/Podfile
@@ -1,9 +1,10 @@
 target ‘Objective-C UI ProjectUITests’ do
-  pod ‘Kiwi’, '~> 2.3’
+       pod ‘Kiwi’
 end
 
 target ‘Objective-C UI Project’ do
-  pod 'FBSDKCoreKit'
-  pod 'FBSDKLoginKit' 
-  pod ’FBSDKShareKit’
+ 	 pod 'FBSDKCoreKit'
+	 pod 'FBSDKLoginKit' 
+  	 pod ’FBSDKShareKit’
+	 pod 'SocketRocket'
 end
